@@ -307,3 +307,11 @@
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xf5
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xf6
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xf7
+	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xf8
+	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xf9
+	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xfa
+	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xfb
+	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xfc
+	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xfd
+	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xfe
+	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xff
